// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MobileNav matches snapshot when showLogin is false 1`] = `
<nav
  className="usa-nav"
>
  <div
    className="usa-nav-inner"
  >
    <button
      className="usa-nav-close"
    >
      <img
        alt="close"
        src="close.svg"
      />
    </button>
    <div
      className="usa-nav-secondary mobile-nav"
    >
      <ul
        className="usa-unstyled-list usa-nav-secondary-links mobile-nav-only"
      >
        <li
          className="mobile-nav-only"
        >
          Signed in as jdoe
        </li>
        <hr
          className="mobile-nav-only"
        />
        <li>
          <Link
            replace={false}
            to="/results"
          >
            <FontAwesome
              name="search"
            />
             Search
          </Link>
        </li>
        <li>
          <Link
            replace={false}
            to="/"
          >
            Home
          </Link>
        </li>
        <li>
          <Link
            replace={false}
            to="/about"
          >
            About
          </Link>
        </li>
        <span
          className="usa-unstyled-list mobile-nav-only"
        >
          <hr />
          <li>
            <Link
              replace={false}
              to="/profile/dashboard/"
            >
              Profile
            </Link>
          </li>
          <li>
            <Link
              id="logout-mobile"
              onClick={[Function]}
              replace={false}
              to="/logout"
            >
              Logout
            </Link>
          </li>
        </span>
      </ul>
    </div>
  </div>
</nav>
`;

exports[`MobileNav matches snapshot when showLogin is true 1`] = `
<nav
  className="usa-nav"
>
  <div
    className="usa-nav-inner"
  >
    <button
      className="usa-nav-close"
    >
      <img
        alt="close"
        src="close.svg"
      />
    </button>
    <div
      className="usa-nav-secondary mobile-nav"
    >
      <ul
        className="usa-unstyled-list usa-nav-secondary-links mobile-nav-only"
      >
        <li
          className="mobile-nav-only"
        >
          Signed in as jdoe
        </li>
        <hr
          className="mobile-nav-only"
        />
        <li>
          <Link
            replace={false}
            to="/results"
          >
            <FontAwesome
              name="search"
            />
             Search
          </Link>
        </li>
        <li>
          <Link
            replace={false}
            to="/"
          >
            Home
          </Link>
        </li>
        <li>
          <Link
            replace={false}
            to="/about"
          >
            About
          </Link>
        </li>
        <span
          className="usa-unstyled-list mobile-nav-only"
        >
          <hr />
          <li>
            <Link
              replace={false}
              to="/profile/dashboard/"
            >
              Profile
            </Link>
          </li>
          <li>
            <Link
              id="login-mobile"
              replace={false}
              to="login"
            >
              Login
            </Link>
          </li>
        </span>
      </ul>
    </div>
  </div>
</nav>
`;
